--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <div class="message">
-      <h1>eHouseOffers.com is currently undergoing some maintenance.</h1>
+      <h1>eHouseOffers is currently undergoing maintenance.</h1>
       <p>We apologize for any inconvenience and appreciate your patience.</p>
     </div>
     <div class="foot">
